talya dal bl views

--- a/Lawyer/Lawyer/Views/Home/Index.cshtml
+++ b/Lawyer/Lawyer/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
         <div class="services-child">
             <div class="container">
                 <div class="col">
-                    <div class="col-lg-4 col-md-6 col-12">
+                    <div id=" verdicts" class="col-lg-4 col-md-6 col-12">
                         <div>
                             <img src="/imgs/pic4.jpg">
                             <a href="#"><h4>חקיקה</h4></a>
@@ -79,18 +79,43 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12">
+                    <div id="QandAs" class="col-lg-4 col-md-6 col-12">
                         <div>
-                            <img src="/imgs/pic5.jpg">
-                            <a href="#"><h4>Steel Industry</h4></a>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui</p>
+                            <img src="/imgs/pic4.jpg">
+                            <a href="#"><h4>שאילתות</h4></a>
+                            <p>מה זה השאילתות האלה</p>
+                            <a href="~/QandAs" class="btn btn-1">
+                                <svg>
+                                    <rect x="0" y="0" fill="none" width="100%" height="100%" />
+                                </svg>
+                                לשאילתות
+                            </a>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-12">
+                    <div id="legislations" class="col-lg-4 col-md-6 col-12">
                         <div>
-                            <img src="/imgs/pic6.jpg">
-                            <a href="#"><h4>Auto Engineering</h4></a>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, qui</p>
+                            <img src="/imgs/pic4.jpg">
+                            <a href="#"><h4>תקצירי פסיקה</h4></a>
+                            <p>מה זה תקצירי הפסיקה האלה</p>
+                            <a href="~/legislations" class="btn btn-1">
+                                <svg>
+                                    <rect x="0" y="0" fill="none" width="100%" height="100%" />
+                                </svg>
+                                לתקצירי הפסיקה
+                            </a>
+                        </div>
+                    </div>
+                    <div  id="terms" class="col-lg-4 col-md-6 col-12">
+                        <div>
+                            <img src="/imgs/pic4.jpg">
+                            <a href="#"><h4>למונחים</h4></a>
+                            <p>מה זה המונחים האלה</p>
+                            <a href="~/Terms" class="btn btn-1">
+                                <svg>
+                                    <rect x="0" y="0" fill="none" width="100%" height="100%" />
+                                </svg>
+                                למונחים
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -99,7 +124,7 @@
         </div>
     </div>
 
-    <div class="project">
+    @*<div class="project">
         <div class="container"><h2 class="text-capitalize"><span>rece</span>nt projects</h2></div>
         <div class="project-child">
             <div class="container">
@@ -137,7 +162,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>*@
 
     <div class="contact" id="contact">
         <div class="container"><h2 class="text-capitalize"><span>get</span> in touch</h2></div>
